--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,7 @@ code {
 .previewimgContainer
 {
   width: 70%;
-  height: 70%;
+  max-height: 70%;
   display: flex; 
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ code {
 .previewimg
 {
   width: 100%;
-  height: 90%;
+  max-height: 60%;
  
 }
 
