--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,8 +14,7 @@ code {
 }
 
 
-.homeContainer
-{
+.homeContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,47 +27,72 @@ code {
   overflow-y: scroll;
 }
 
-.previewimgContainer
-{
+.previewimgContainer {
   width: 70%;
-  max-height: 70%;
-  display: flex; 
+  height: auto;
+  display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
 
 }
 
-.previewimg
-{
-  width: 100%;
-  max-height: 60%;
- 
+.previewimg {
+  width: 90%;
+  height: 60%;
 }
 
-@media only screen and (max-width:1000px)
-{
-  .previewimgContainer
-  {
+.imageDetailsContainer {
+  width: 90%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+
+.imageDetailsPreviewImg {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+@media only screen and (max-width:1000px) {
+  .previewimgContainer {
     width: 85%;
-    height: 85%;
     max-width: 99%;
-    max-height: 100%;
   }
-  
- 
+
+  .previewimg {
+    height: 70%;
+  }
+
+
 }
 
-@media only screen and (max-width:650px)
-{
+@media only screen and (max-width:650px) {
 
-  .previewimgContainer
-  {
+  .previewimgContainer {
     width: 100%;
-    height: 100%;
-    max-width: 99%;
-    max-height: 100%;
+    max-width: 90%;
+    max-height: 80%;
     margin: 30px auto;
 
+
+  }
+
+  .previewimg {
+    width: 100%;
+    height: 80%;
+  }
+
+  .imageDetailsContainer {
+    width: 99%;
+    height: 55%;
+  }
+
+  .imageDetailsPreviewImg {
+    width: 100%;
+    max-width: 99%;
+    max-height: 99%;
   }
 }
